fixed too light colors & fixed font icon path

--- a/app/styles/scss/_variables.scss
+++ b/app/styles/scss/_variables.scss
@@ -16,9 +16,9 @@ $gray-light:             #4E5D6C !default;   // #999
 $gray-lighter:           #EBEBEB !default; // #eee
 
 $brand-primary:         #DF691A !default;
-$brand-success:         #5cb85c !default;
+$brand-success:         #418d41 !default;
 $brand-info:            #5bc0de !default;
-$brand-warning:         #f0ad4e !default;
+$brand-warning:         #ca953d !default;
 $brand-danger:          #d9534f !default;
 
 
@@ -77,7 +77,7 @@ $headings-color:          inherit !default;
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-$icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../fonts/bootstrap/") !default;
+$icon-font-path: if($bootstrap-sass-asset-helper, "bootstrap/", "../../bower_components/bootstrap/dist/fonts/") !default;
 //** File name for all font files.
 $icon-font-name:          "glyphicons-halflings-regular" !default;
 //** Element ID within SVG icon file.
